# Aether

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: apple-silicon-gpu.yml  ci.yml
MetalPractice/: config.h  main.cpp
MetalPractice.xcodeproj/: project.pbxproj
MetalPractice/control/: app_delegate.cpp  app_delegate.h  view_delegate.cpp  view_delegate.h
MetalPractice/shaders/: general_shader.metal  triangle.metal
MetalPractice/view/: mesh_factory.cpp  mesh_factory.h  renderer.cpp  renderer.h
apps/AetherBenchmark/: CMakeLists.txt  main.cpp
apps/AetherStudio/: CMakeLists.txt  Info.plist.in
apps/AetherStudio/Bridge/: AetherCaptureBridge.h  AetherCaptureBridge.mm  AetherLiveSessionBridge.h  AetherLiveSessionBridge.mm  AetherStudio-Bridging-Header.h  AetherViewportBridge.h  AetherViewportBridge.mm
apps/AetherStudio/Sources/: AetherProjectDocument.swift  AetherStudioApp.swift  AetherViewport.swift  ContentView.swift  ReconstructionReport.swift  ReconstructionWorkspace.swift  TrainingComparisonViewport.swift
apps/MavebCapture/: CMakeLists.txt  Info.plist.in  README.md
apps/MavebCapture/Sources/: CaptureController.swift  CaptureManifest.swift  CaptureRecorder.swift  CaptureView.swift  MavebCaptureApp.swift
cmake/: AetherDependencies.cmake  AetherWarnings.cmake  ApplyFastgltfPatch.cmake  CompileMetal.cmake
cmake/patches/: fastgltf-v0.9.0-node-weights.patch
dependencies/: reconstruction.lock.json
docs/: BENCHMARKING.md  CAPTURE_VALIDATION.md  CLUSTERED_LIGHTING.md  DEPENDENCIES.md  EVALUATION.md  EVIDENCE.md  GAUSSIAN_DEBUG_VIEWS.md  GLTF_RENDERING.md  HDR_RENDERING.md  HYBRID_RENDERING.md  IMAGE_BASED_LIGHTING.md  PROXY_GENERATION.md  RECONSTRUCTION.md  RENDER_GOLDENS.md  ROADMAP.md  SCENE_INTERACTION.md  SHADOWS.md  TEMPORAL_RENDERING.md
docs/adr/: 0004-gaussian-metal3-correctness-path.md  0005-reconstruction-truth-and-oracle-first.md
docs/architecture/: 0001-metal-native-core.md  0002-research-separation.md  0003-scene-math.md
docs/formats/: AETHER_CAPTURE.md  AETHER_PACKAGE.md  GAUSSIAN_PLY.md
engine/capture/: CMakeLists.txt
engine/capture/calibration/: CalibrationLoader.cpp
engine/capture/include/aether/capture/: AVFoundationFrameSource.hpp  CapturePacket.hpp  CaptureValidator.hpp  FrameSource.hpp  RecordedSequenceSource.hpp
engine/capture/include/aether/capture/calibration/: CalibrationLoader.hpp  CameraCalibration.hpp
engine/capture/src/: AVFoundationFrameSource.mm  CapturePacket.cpp  CaptureValidator.cpp  RecordedSequenceSource.cpp
engine/core/: CMakeLists.txt
engine/core/include/aether/core/: Clock.hpp  Diagnostics.hpp  Error.hpp  JobSystem.hpp  Log.hpp  Profiler.hpp  ResourceLocator.hpp
engine/core/src/: Diagnostics.cpp  JobSystem.cpp  Log.cpp  Profiler.cpp  ResourceLocator.cpp
engine/gaussian/: CMakeLists.txt
engine/gaussian/include/aether/gaussian/: GaussianAsset.hpp  GaussianCodec.hpp  PlyLoader.hpp  ReferenceRasterizer.hpp
engine/gaussian/src/: GaussianCodec.cpp  PlyLoader.cpp  ReferenceRasterizer.cpp
engine/hybrid/: CMakeLists.txt
engine/mesh/: CMakeLists.txt
engine/mesh/include/aether/mesh/: Animation.hpp  GltfLoader.hpp  MeshAsset.hpp  PlyExporter.hpp  TransparentSort.hpp
engine/mesh/src/: Animation.cpp  GltfLoader.cpp  PlyExporter.cpp
engine/metal/: CMakeLists.txt
engine/metal/include/aether/metal/: FrameContext.hpp  GaussianPipeline.hpp  MetalPtr.hpp  Renderer.hpp
engine/metal/src/: FrameContext.cpp  GaussianPipeline.cpp  MetalSymbols.cpp  Renderer.cpp  ShaderABI.cpp
engine/package/: CMakeLists.txt
engine/package/include/aether/package/: Package.hpp  Sha256.hpp
engine/package/src/: Package.cpp  Sha256.cpp
engine/reconstruction/: CMakeLists.txt
engine/reconstruction/include/aether/reconstruction/: DenseTsdfVolume.hpp  FeatureTracker.hpp  Fusion.hpp  GeometryEvaluation.hpp  LiveReconstructionSession.hpp  MeshExtractor.hpp  ReconstructionContracts.hpp  RecordedProviders.hpp  SparseModelValidator.hpp  Tracker.hpp  VoxelFusion.hpp
engine/reconstruction/src/: DenseTsdfVolume.cpp  FeatureTracker.cpp  GeometryEvaluation.cpp  LiveReconstructionSession.cpp  RecordedProviders.cpp  SparseModelValidator.cpp  VoxelFusion.cpp
engine/rendergraph/: CMakeLists.txt
engine/rendergraph/include/aether/rendergraph/: RenderGraph.hpp
engine/rendergraph/src/: RenderGraph.cpp
engine/scene/: CMakeLists.txt
engine/scene/include/aether/scene/: Camera.hpp  CameraController.hpp  CameraPath.hpp  ImageBasedLighting.hpp  Lighting.hpp  Scene.hpp  Shadows.hpp  Transform.hpp
engine/scene/src/: Camera.cpp  CameraController.cpp  CameraPath.cpp  ImageBasedLighting.cpp  Lighting.cpp  Scene.cpp  Shadows.cpp  Transform.cpp
examples/00_triangle/: CMakeLists.txt  config.h  main.cpp
examples/00_triangle/control/: app_delegate.cpp  app_delegate.h  view_delegate.cpp  view_delegate.h
examples/00_triangle/shaders/: general_shader.metal  triangle.metal
examples/00_triangle/view/: mesh_factory.cpp  mesh_factory.h  renderer.cpp  renderer.h
shaders/: gaussian.metal  gizmo.metal  pbr.metal  proxy.metal  shadow.metal  viewport.metal
tests/: CMakeLists.txt  CaptureTests.cpp  MetalTests.cpp  SwiftDocumentTests.swift  TestMain.cpp
tests/fixtures/: animated-triangle.gltf  assert-brush-checkpoint-recovery.zsh  assert-coverage-gate.zsh  assert-oracle-fusion.zsh  assert-proxy-resume.zsh  assert-resume-key.zsh  camera-path.json  gaussian-minimal.ply  gaussian.aetherproject  instanced-triangle.gltf  mock-brush.zsh  mock-colmap-weak.zsh  mock-colmap.zsh  mock-proxy.zsh  morphed-triangle.gltf  morphed.aetherproject  shadow-casters.gltf  skinned-triangle.gltf  skinned.aetherproject  textured-triangle.gltf  textured.aetherproject  triangle.aetherproject  triangle.gltf
tests/fixtures/package-scene/: base-gaussians.ply  metadata.json  proxy.ply
tools/: bootstrap-reconstruction.zsh  create_toy_images.py
tools/aether-proxy/: pyproject.toml
tools/aether-proxy/src/aether_proxy/: __init__.py  cli.py
tools/aether-proxy/tests/: test_proxy.py
(+20 files in other folders)
