cmake_minimum_required(VERSION 3.28)

project(Aether VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

option(AETHER_BUILD_STUDIO "Build the SwiftUI AetherStudio application" ${APPLE})
option(AETHER_BUILD_TOOLS "Build AETHER command-line tools" ON)
option(AETHER_BUILD_TESTS "Build AETHER tests" ON)
option(AETHER_BUILD_EXAMPLES "Build archived tutorial examples" OFF)
option(AETHER_WARNINGS_AS_ERRORS "Treat compiler warnings as errors" ON)
option(AETHER_ENABLE_ASAN "Enable AddressSanitizer and UndefinedBehaviorSanitizer" OFF)
option(AETHER_REQUIRE_METAL_TOOLCHAIN "Fail configuration when metal/metallib are unavailable" OFF)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
include(AetherWarnings)
include(AetherDependencies)

add_subdirectory(engine/core)
add_subdirectory(engine/rendergraph)
add_subdirectory(engine/scene)
aether_resolve_fastgltf()
add_subdirectory(engine/mesh)

if(AETHER_BUILD_TOOLS)
    add_subdirectory(tools/aether-inspect)
endif()

if(AETHER_BUILD_STUDIO)
    if(NOT APPLE)
        message(FATAL_ERROR "AetherStudio is a macOS application")
    endif()
    enable_language(OBJCXX)
    enable_language(Swift)
    add_subdirectory(engine/metal)
    add_subdirectory(apps/AetherStudio)
endif()

if(AETHER_BUILD_TESTS)
    include(CTest)
    enable_testing()
    add_subdirectory(tests)
endif()

if(AETHER_BUILD_EXAMPLES)
    add_subdirectory(examples/00_triangle)
endif()
